20170926 commit Add: 1.ScrollView in Register.xml 2.Add CardView in  layout_cardview.xml 3.Add RecyclerView in activity_home.xml 4.Add RecyclerAdapter
Fix:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="editText_hint_username">Choose your username</string>
     <string name="editText_hint_birthdate">MM / DD</string>
     <string name="editText_hint_gender">Male / Female</string>
+    <string name="textView_cardView">Greece Aegean Sea Romantic...</string>
 </resources>
