--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="editText_hint_birthdate">MM / DD</string>
     <string name="editText_hint_gender">Male / Female</string>
     <string name="textView_cardView">Greece Aegean Sea Romantic...</string>
+    <string name="title_activity_booking">Booking</string>
 </resources>
